--- a/test.ipynb
+++ b/test.ipynb
@@ -10,14 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dhoer\\anaconda3\\envs\\ml\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-      "Downloading: 100%|██████████| 629/629 [00:00<00:00, 630kB/s]\n",
-      "Downloading: 100%|██████████| 268M/268M [00:08<00:00, 32.5MB/s] \n",
-      "Downloading: 100%|██████████| 48.0/48.0 [00:00<00:00, 30.5kB/s]\n",
-      "Downloading: 100%|██████████| 232k/232k [00:00<00:00, 2.12MB/s]\n"
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
      ]
     },
     {
@@ -36,6 +30,46 @@
     "\n",
     "classifier = pipeline(\"sentiment-analysis\")\n",
     "classifier(\"We are very happy to show you the 🤗 Transformers library.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bb3fb1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased-finetuned-sst-2-english were not used when initializing DistilBertModel: ['classifier.bias', 'pre_classifier.bias', 'pre_classifier.weight', 'classifier.weight']\n",
+      "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 16, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "\n",
+    "checkpoint = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "model = AutoModel.from_pretrained(checkpoint)\n",
+    "\n",
+    "raw_inputs = [\n",
+    "    \"I've been waiting for a HuggingFace course my whole life.\",\n",
+    "    \"I hate this so much!\",\n",
+    "]\n",
+    "inputs = tokenizer(raw_inputs, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "\n",
+    "outputs = model(**inputs)\n",
+    "print(outputs.last_hidden_state.shape)"
    ]
   }
  ],
