--- a/test.ipynb
+++ b/test.ipynb
@@ -34,33 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bb3fb1d5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased-finetuned-sst-2-english were not used when initializing DistilBertModel: ['classifier.bias', 'pre_classifier.bias', 'pre_classifier.weight', 'classifier.weight']\n",
-      "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 16, 768])\n"
+      "tensor([[-1.5607,  1.6123],\n",
+      "        [ 4.1692, -3.3464]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "\n",
     "checkpoint = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
-    "model = AutoModel.from_pretrained(checkpoint)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(checkpoint)\n",
     "\n",
     "raw_inputs = [\n",
     "    \"I've been waiting for a HuggingFace course my whole life.\",\n",
@@ -69,7 +61,29 @@
     "inputs = tokenizer(raw_inputs, padding=True, truncation=True, return_tensors=\"pt\")\n",
     "\n",
     "outputs = model(**inputs)\n",
-    "print(outputs.last_hidden_state.shape)"
+    "print(outputs.logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f31ef2a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4.0195e-02, 9.5981e-01],\n",
+      "        [9.9946e-01, 5.4419e-04]], grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "predictions = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
+    "print(predictions)"
    ]
   }
  ],
